--- a/Html/index.css
+++ b/Html/index.css
@@ -1,12 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Roboto+Condensed&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Roboto+Condensed&family=Rubik&display=swap");
-
-@font-face {
-  font-family: "Pricedown";
-  src: url("pricedow.ttf") format("truetype");
-}
-
 @import url('https://fonts.cdnfonts.com/css/pricedown');
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&family=Lobster&display=swap');
 
 /* body{
     width: 100vw;
@@ -97,7 +93,7 @@ a:hover {
   padding: 0.5rem;
   color: white;
   text-decoration: none;
-  font-family: "Pricedown";
+  font-family: 'Lilita One', cursive;
   font-size: 1.7rem;
   text-shadow:
     -1px -1px 0px black,
@@ -142,7 +138,8 @@ main {
 }
 
 h1 {
-  font-family: 'Pricedown';
+  font-family: 'Lilita One', cursive;
+  font-family: 'Lobster', cursive;
   margin: 0 auto;
   text-shadow:
     -1px -1px 0px black,
@@ -155,12 +152,13 @@ h1 {
 .contend {
   width: 100%;
   height: 69%;
+  row-gap: 7px;
   display: grid;
   justify-items: center;
 }
 
 .contend p {
-  font-size: 1rem;
+  font-size: 1.1rem;
   text-align: left;
   padding-left: 10px;
   padding-right: 10px;
@@ -241,24 +239,30 @@ h1 {
 .lado>.destaques {
   list-style: none;
   display: flex;
-  height: 50%;
+  height: fit-content;
   flex-direction: column;
   justify-content: center;
 }
 
 .lado>.criadores {
+  width: 100%;
   list-style: none;
-  height: 50%;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.lado>h2 {
-  font-size: 18px;
-  width: max-content;
+.lado h2 {
+  background-color:  rgba(255, 255, 255, 0.2);
+  font-size: 1.5rem;
+  width: 100%;
   margin: 0 auto;
+}
+
+.lado .destaques h2 {
+  border-top-right-radius: 10px;
 }
 
 .lado>.destaques>li {
@@ -279,6 +283,8 @@ hr {
 .separador {
   width: 100%;
   border-color: #f0e3be;
+  display: block;
+  margin-top: 50px;
 }
 
 .lado>.criadores>li {
@@ -321,7 +327,7 @@ hr {
 
 @media screen and (max-width: 1175px) {
   main {
-    height: 80%;
+    height: 81.4%;
     margin-top: 0px;
   }
 
@@ -335,9 +341,24 @@ hr {
     border-top: 0px;
   }
 
+  .lado .destaques{
+    justify-content: flex-start;
+  }
+
   #header {
     justify-content: center;
   }
+
+  .lado .destaques h2{
+    border-top-right-radius: 0px;
+  }
+  .separador{
+    margin-top: 80px;
+  }
+  .contend{
+    align-items: center;
+  }
+
 }
 
 
@@ -385,6 +406,18 @@ hr {
     width: 200px;
     text-align: center;
   }
+
+  .lado .destaques{
+    height: 50%;
+  }
+  .lado .criadores{
+    height: 50%;
+    justify-content: flex-start;
+  }
+
+  .separador{
+    margin: 0px;
+  }
 }
 
 @media screen and (max-width: 993px) {
@@ -393,20 +426,20 @@ hr {
   }
 
   main {
-    height: 81.2%;
+    height: 81.5%;
   }
 
   .lado {
     border-top: none;
   }
-
-  #header {
-    justify-content: space-between;
-  }
 }
 
 
 @media (max-width: 933px) {
+
+  #header{
+    justify-content: space-between;
+  }
   #menu {
     display: block;
     position: absolute;
@@ -478,7 +511,7 @@ hr {
   }
 
   main {
-    height: 88%;
+    height: 87.8%;
   }
 
   #n555 {
@@ -580,19 +613,23 @@ hr {
   }
 
   .lado>.destaques {
-    border-bottom: 2px solid #f0e3be;
+    height: fit-content;
+    border-bottom: none;
+  }
+
+  .separador{
+    display: none;
   }
 
   .lado>.criadores {
-    height: 53%;
-    padding-top: 10%;
+    padding-top: 20px;
+    height: fit-content;
     justify-content: flex-end;
   }
-}
 
-
-.separador {
-  display: none;
+  .lado .criadores h2{
+    border-top: 1px solid #f0e3be;
+  }
 }
 
 @media screen and (max-width: 521px) {
