--- a/armas_gtav/armas.css
+++ b/armas_gtav/armas.css
@@ -1,21 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Roboto+Condensed&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Roboto+Condensed&family=Rubik&display=swap");
-@font-face {
-  font-family: "Pricedown";
-  src: url("pricedow.ttf") format("truetype");
-}
-
-body {
-  overflow-x: hidden;
-  margin: 0px;
-  padding: 0px;
-  background-image: url("./assets/background.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-}
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&family=Lobster&display=swap');
 
 * {
+  padding: 0;
   box-sizing: border-box;
   color: #ffffff;
   font-family: "Montserrat", sans-serif;
@@ -23,126 +12,141 @@ body {
   font-family: "Rubik", sans-serif;
 }
 
-.wrapper {
+body{
+  height: 100vh;
   width: 100%;
+  background-image: url("./assets/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
   overflow-x: hidden;
-}
-
-header {
-  margin: 0px;
-  padding: 0px;
-  display: flex;
-  height: 9%;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.9);
-  border-bottom: 1px solid #f0e3be;
-  align-items: center;
-  justify-content: center;
-}
-
-header > nav {
-  height: 100%;
-  display: flex;
-}
-
-#header-img {
-  display: none;
-}
-
-.lista {
-  padding: 0px;
-  margin: 0px;
-  position: relative;
-  height: 100%;
-  display: inline-flex;
-  width: 100%;
-  list-style: none;
-  justify-content: center;
-  align-items: center;
-  border-radius: 10px;
-}
-
-.lista li {
   display: grid;
-  align-items: center;
+    height: fit-content;
+    grid-template-areas:
+        "header"
+        "main"
+        "footer";
+    grid-template-columns: repeat(1, 1fr);
 }
 
-.button {
-  height: 65px;
-  margin: 0 auto;
-  padding-left: 5px;
-  padding-right: 5px;
-}
-
-.button:hover {
-  background-color: #ffffff;
-}
-
-.button:not(:last-child) {
-  border-right: 1px solid #f0e3be;
-}
-
-.submenu {
-  display: none;
-}
-
-li:hover .submenu {
-  position: absolute;
-  list-style: none;
-  left: 0%;
-  background-color: #000000;
-  border: 1px solid #f0e3be;
-  display: flex;
-  gap: 20px;
-  top: 100%;
-  width: 100%;
-  height: 90%;
-  justify-content: center;
-}
-
-.submenu li {
-  color: #ffffff;
-  font-size: 20px;
-  font-family: "Montserrat", sans-serif;
-  font-family: "Roboto Condensed", sans-serif;
-  font-family: "Rubik", sans-serif;
-  position: relative;
-  top: 0%;
-}
-
-.submenu li a:hover {
-  color: aqua;
-  cursor: pointer;
-}
-
-.lista img {
-  height: 50%;
-  position: relative;
-  top: 0%;
-}
-
-main{
-    border-bottom: none;
-    width: 100%;
-    margin: 0 auto;
-    background-color: rgba(0, 0, 0, 0.9);
-    padding: 20px;
+body,
+ul {
+  margin: 0px;
+  padding: 0px;
 }
 
 h1{
-    text-align: center;
+  font-size: 2.5rem;
+  font-family: 'Lobster', cursive;
+    margin: 0 auto;
+    text-shadow: -6px -1px 0px rgb(0, 88, 19), -1px 1px 0px black, 1px -1px 0px black, 1px 0px 0px black;
 }
-.logo {
+
+.wrapper{
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+
+a {
+  color: black;
+  text-decoration: none;
+  font-family: sans-serif;
+}
+
+a:hover {
+  background: rgba(0, 0, 0, 0.05);
+}
+
+#logo {
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-family: "Pricedown";
+  font-size: 2rem;
+  color: white;
+  text-shadow: 
+  -1px -1px 0px black, 
+  -1px 1px 0px black,                    
+   1px -1px 0px black,                  
+   1px 0px 0px black;
+   height: 55px;
+}
+
+#logo img{
+    height: 100%;
+}
+
+#header {
+  position: fixed;
+  top: 0%;
+  z-index: 999;
+  width: 100%;
+  box-sizing: border-box;
+  height: fit-content;
+  padding: 1rem;
   display: flex;
-  justify-content: left;
+  align-items: center;
+  justify-content: space-between;
+  background: rgba(0, 0, 0, 0.8);
+  flex-wrap: wrap;
+  border-bottom: 1px solid #f0e3be;
+  grid-area: header;
 }
 
-.logo img {
-  width: 195px;
+#menu {
+  display: flex;
+  list-style: none;
+  gap: 0.5rem;
+  flex-wrap: wrap;
 }
 
-h1 {
-  text-align: center;
+#menu a {
+  display: block;
+  padding: 0.5rem;
+  color: white;
+  text-decoration: none;
+  font-family: 'Lilita One', cursive;
+  font-size: 1.7rem;
+  text-shadow: 
+  -1px -1px 0px black, 
+  -1px 1px 0px black,                    
+   1px -1px 0px black,                  
+   1px 0px 0px black;
+}
+
+#menu a:hover{
+    color: aqua;
+    border-bottom: none;
+  }
+  
+
+#btn-mobile {
+  display: none;
+}
+
+main {
+  position: relative;
+  /* height: 90%; */
+  /* top: 88px; */
+  width: 80%;
+  height: max-content;
+  grid-area: main;
+  margin: 0 auto;
+  margin-top: 110px;
+  margin-bottom: 25px;
+  /* padding-top: 10px; */
+  /* height: 100%; */
+}
+
+main ul{
+  padding-left: 40px;
+}
+
+main a{
+  color: white;
+}
+
+main p,li,a *{
+  font-size: 1.1rem;
 }
 
 main h2 {
@@ -210,9 +214,21 @@ button {
   color: #abeeab;
 }
 
+#indice_button{
+  outline: none;
+    padding-right: 5px;
+    padding-left: 5px;
+    border-left: none;
+    border-right: none;
+    border-top: 1px solid red;
+    border-bottom-right-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
 #indice_button.highlight {
-  border-left: 1px solid #abeeab;
-  border-right: 1px solid #abeeab;
+  border-top: 1px solid #abeeab;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 5px;
 }
 
 .laranja ol {
@@ -252,42 +268,93 @@ button {
   color: #abeeab;
 }
 
-.sticky-element button{
-    padding: 10px;
-    border: none;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-  }
-  
-  .sticky-element {
-    background-color: rgba(0, 0, 0, 0.9);
-    border: 3px solid #9aeb9a;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    border-right: none;
-    /* height: 100%; */
-    position: fixed;
-    /* top: 0; */
-    /* text-align: center; */
-    z-index: 1; 
-    right: 0;
-  }
-  
-  .sticky-element:hover{
-    background-color: #9aeb9a;
-    border-color: black;
-  }
-  
-  .sticky-element:hover button{
-    color: black;
-  }
 
+.imagens-jp {
+  background-color: black;
+  margin: 0 auto;
+  border: 1px solid #f0e3be;
+  display: grid;
+}
+
+.imagens-jp img {
+  width: 100%;
+  border-bottom: 1px solid #f0e3be;
+}
+
+.caption {
+  margin: 0px;
+  margin-top: 0px;
+  padding: 5px;
+}
+
+#gallery-0 {
+  height: fit-content;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 10px;
+  margin: 0 auto;
+  justify-content: center;
+}
+
+#gallery-0 .imagens-jp {
+  background-color: black;
+  width: 202px;
+}
+
+#gallery-0 .imagens-jp img {
+  width: 100%;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.center img {
+  border-radius: 5px;
+  width: 60%;
+}
+
+.sticky-element button{
+  padding: 10px;
+  border: none;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.sticky-element {
+  top: 113px;
+  background-color: rgba(0, 0, 0, 0.9);
+  border: 3px solid #9aeb9a;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-right: none;
+  /* height: 100%; */
+  position: fixed;
+  /* top: 0; */
+  /* text-align: center; */
+  z-index: 1; 
+  right: 0;
+}
+
+.sticky-element:hover{
+  background-color: #9aeb9a;
+  border-color: black;
+}
+
+.sticky-element:hover button{
+  color: black;
+}
 
 footer {
+  height: fit-content;
+  grid-area: footer;
   width: 100%;
   margin: 0 auto;
-  border-top: 5px solid #f0e3be;
-  background-color: rgba(0, 0, 0, 0.9);
+  border-top: 3px solid #f0e3be;
+  background-color: rgba(0, 0, 0, 1);
 }
 
 footer ul {
@@ -320,7 +387,7 @@ footer ul {
 
 .gunheader{
     text-align: left;
-    font-size: 25px;
+    font-size: 2rem;
     border-top: 1px solid #f0e3be;
     padding-top: 20px;
     color: #66C0F4;
@@ -358,11 +425,103 @@ p {
     background-color: #ffffff;
 }
 
-@media screen and (max-width: 1270px) {
-  .logo {
-    margin-top: 50px;
+
+@media (max-width: 1292px) {
+  .sticky-element{
+    top: 160px;
+  }
+  #header a{
+    font-size: 1.6rem;
+   }
+}
+
+@media (max-width: 1132px) {
+  #header{
+    justify-content: center;
+  }
+  main{
+    margin-top: 160px;
   }
 }
+
+
+@media (max-width: 950px) {
+  #header{
+    justify-content: space-between;
+  }
+  #menu {
+    display: block;
+    position: absolute;
+    width: 100%;
+    top: 70px;
+    right: 0px;
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(1px);
+    transition: 0.6s;
+    z-index: 1000;
+    height: 0px;
+    visibility: hidden;
+    overflow-y: hidden;
+  }
+  #nav.active #menu {
+    height: calc(100vh - 70px);
+    margin-top: 18px;
+    visibility: visible;
+    overflow-y: auto;
+  }
+  #menu a {
+    padding: 1rem 0;
+    border-bottom: 2px solid #f0e3be;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+
+  
+  #btn-mobile {
+    display: flex;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    border: none;
+    background: none;
+    cursor: pointer;
+    gap: 0.5rem;
+  }
+  #hamburger {
+    border-top: 2px solid;
+    width: 30px;
+  }
+  #hamburger::after,
+  #hamburger::before {
+    content: '';
+    display: block;
+    width: 30px;
+    height: 2px;
+    background: currentColor;
+    margin-top: 5px;
+    transition: 0.3s;
+    position: relative;
+  }
+  #nav.active #hamburger {
+    border-top-color: transparent;
+  }
+  #nav.active #hamburger::before {
+    transform: rotate(135deg);
+  }
+  #nav.active #hamburger::after {
+    transform: rotate(-135deg);
+    top: -7px;
+  }
+
+  .sticky-element{
+    top: 100px;
+  }
+  main{
+    margin-top: 110px;
+  }
+
+}
+
+
 
 @media screen and (max-width: 900px) {
 
@@ -377,20 +536,11 @@ p {
   }
 }
 
-@media screen and (max-width: 830px) {
-  .lista img {
-    height: 45%;
-  }
-}
+
   @media screen and (max-width: 750px) {
 
   .button:hover {
     background-color: black;
-  }
-
-  header > nav {
-    width: 100%;
-    margin-right: 0px;
   }
 
   .lista {
@@ -455,26 +605,23 @@ p {
   .logo{
     margin-top: 0px;
   }
+
+  @media screen and (max-width: 620px) {
+    .sticky-element {
+      top: 180px;
+    }
 }
 
-
-@media screen and (max-width: 420px) {
-  .logo {
-    justify-content: center;
-  }
-}
 
 @media screen and (max-width: 355px) {
-  .logo img {
-    width: 100%;
-  }
   .laranja {
     width: 100%;
   }
 }
 
-@media screen and (max-width: 340px) {
-  h1 {
-    font-size: 29px;
+@media screen and (max-width: 345px) {
+  .sticky-element {
+    top: 225px;
   }
+}
 }
