--- a/mapa_gtav/blaine_county.css
+++ b/mapa_gtav/blaine_county.css
@@ -1,17 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Roboto+Condensed&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Roboto+Condensed&family=Rubik&display=swap");
-@font-face {
-  font-family: "Pricedown";
-  src: url("pricedow.ttf") format("truetype");
-}
-
-body {
-  overflow-x: hidden;
-  margin: 0px;
-  padding: 0px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&family=Lobster&display=swap');
 
 * {
+  padding: 0;
   box-sizing: border-box;
   color: #ffffff;
   font-family: "Montserrat", sans-serif;
@@ -19,125 +12,141 @@ body {
   font-family: "Rubik", sans-serif;
 }
 
-.wrapper {
+body{
+  height: 100vh;
   width: 100%;
   background-image: url("./assets/background.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   overflow-x: hidden;
-}
-
-header {
-  margin: 0px;
-  padding: 0px;
-  display: flex;
-  height: 9%;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.9);
-  border-bottom: 1px solid #f0e3be;
-  align-items: center;
-  justify-content: center;
-}
-
-header > nav {
-  height: 100%;
-  display: flex;
-}
-
-#header-img {
-  display: none;
-}
-
-.lista {
-  padding: 0px;
-  margin: 0px;
-  position: relative;
-  height: 100%;
-  display: inline-flex;
-  width: 100%;
-  list-style: none;
-  justify-content: center;
-  align-items: center;
-  border-radius: 10px;
-}
-
-.lista li {
   display: grid;
-  align-items: center;
+    height: fit-content;
+    grid-template-areas:
+        "header"
+        "main"
+        "footer";
+    grid-template-columns: repeat(1, 1fr);
 }
 
-.button {
-  height: 65px;
-  margin: 0 auto;
-  padding-left: 5px;
-  padding-right: 5px;
+body,
+ul {
+  margin: 0px;
+  padding: 0px;
 }
 
-.button:hover {
-  background-color: #ffffff;
+.wrapper{
+  background-color: rgba(0, 0, 0, 0.9);
 }
 
-.button:not(:last-child) {
-  border-right: 1px solid #f0e3be;
+h1{
+  font-size: 2.5rem;
+  font-family: 'Lobster', cursive;
+    margin: 0 auto;
+    text-shadow: -4px -1px 0px rgb(0, 88, 19), -1px 1px 0px black, 1px -1px 0px black, 1px 0px 0px black;
 }
 
-.submenu {
-  display: none;
+a {
+  color: black;
+  text-decoration: none;
+  font-family: sans-serif;
 }
 
-li:hover .submenu {
-  position: absolute;
-  list-style: none;
-  left: 0%;
-  background-color: #000000;
-  border: 1px solid #f0e3be;
-  display: flex;
-  gap: 20px;
-  top: 100%;
+a:hover {
+  background: rgba(0, 0, 0, 0.05);
+}
+
+#logo {
+  font-weight: bold;
+  font-family: "Pricedown";
+  font-size: 2rem;
+  color: white;
+  text-shadow: 
+  -1px -1px 0px black, 
+  -1px 1px 0px black,                    
+   1px -1px 0px black,                  
+   1px 0px 0px black;
+   height: 55px;
+}
+
+#logo img{
+    height: 100%;
+}
+
+#header {
+  position: fixed;
+  top: 0%;
+  z-index: 999;
   width: 100%;
-  height: 90%;
-  justify-content: center;
+  box-sizing: border-box;
+  height: fit-content;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: rgba(0, 0, 0, 0.8);
+  flex-wrap: wrap;
+  border-bottom: 1px solid #f0e3be;
+  grid-area: header;
 }
 
-.submenu li {
-  color: #ffffff;
-  font-size: 20px;
-  font-family: "Montserrat", sans-serif;
-  font-family: "Roboto Condensed", sans-serif;
-  font-family: "Rubik", sans-serif;
-  position: relative;
-  top: 0%;
+#menu {
+  display: flex;
+  list-style: none;
+  gap: 0.5rem;
+  flex-wrap: wrap;
 }
 
-.submenu li a:hover {
-  color: aqua;
-  cursor: pointer;
+#menu a {
+  display: block;
+  padding: 0.5rem;
+  color: white;
+  text-decoration: none;
+  font-family: "Pricedown";
+  font-size: 1.7rem;
+  text-shadow: 
+  -1px -1px 0px black, 
+  -1px 1px 0px black,                    
+   1px -1px 0px black,                  
+   1px 0px 0px black;
 }
 
-.lista img {
-  height: 50%;
-  position: relative;
-  top: 0%;
+#menu a:hover{
+    color: aqua;
+    border-bottom: none;
+  }
+  
+
+#btn-mobile {
+  display: none;
 }
 
 main {
-  padding: 20px;
-  background-color: rgba(0, 0, 0, 0.9);
-  border-bottom: none;
-  width: 100%;
+  position: relative;
+  /* height: 90%; */
+  /* top: 88px; */
+  width: 80%;
+  margin-top: 88px;
+  height: max-content;
+  grid-area: main;
   margin: 0 auto;
+  margin-top: 110px;
+  /* padding-top: 10px; */
+  /* height: 100%; */
 }
 
-
-.logo {
-  display: flex;
-  justify-content: left;
+main ul{
+  padding-left: 40px;
 }
 
-.logo img {
-  width: 195px;
+main a{
+  color: white;
 }
+
+main p,li,a *{
+  font-size: 1rem;
+}
+
 
 #indice {
   width: fit-content;
@@ -146,10 +155,6 @@ main {
   text-align: left;
   border-radius: 15px;
   display: none;
-}
-
-h1 {
-  text-align: center;
 }
 
 main h2 {
@@ -163,15 +168,14 @@ main h3{
 }
 
 #lafigure{
-    position: relative;
-    bottom: 100px;
-    width: 170px;
-    border: 1px solid black;
-    display: flex;
-    background-color: black;
-    float: right;
-    flex-direction: column;
-    margin-right: 0px;
+  position: relative;
+  bottom: 50px;
+  width: 200px;
+  border: 1px solid black;
+  display: flex;
+  background-color: black;
+  float: right;
+  flex-direction: column;
 }
 
 #lafigure figcaption{
@@ -190,8 +194,6 @@ main h3{
     color: white;
 }
 
-
-
 .laranja {
   background-color: #000000;
   border: 1px solid #f0e3be;
@@ -199,7 +201,7 @@ main h3{
   position: relative;
   display: inline-block;
   width: fit-content;
-  margin: 0 auto;
+  margin: 10px;
 }
 
 .indice-header {
@@ -251,9 +253,21 @@ button {
   color: #abeeab;
 }
 
+#indice_button{
+  outline: none;
+    padding-right: 5px;
+    padding-left: 5px;
+    border-left: none;
+    border-right: none;
+    border-top: 1px solid red;
+    border-bottom-right-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
 #indice_button.highlight {
-  border-left: 1px solid #abeeab;
-  border-right: 1px solid #abeeab;
+  border-top: 1px solid #abeeab;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 5px;
 }
 
 .laranja ol {
@@ -279,8 +293,6 @@ button {
 .laranja span {
     color: #b3b3b3;
   }
-  
-  
 
 .laranja ol li a:hover {
   background: rgba(255, 255, 255, 0.5);
@@ -295,75 +307,95 @@ button {
   color: #abeeab;
 }
 
-.sticky-element button{
-    padding: 10px;
-    border: none;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-  }
-  
-  .sticky-element {
-    background-color: rgba(0, 0, 0, 0.9);
-    border: 3px solid #9aeb9a;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    border-right: none;
-    /* height: 100%; */
-    position: fixed;
-    /* top: 0; */
-    /* text-align: center; */
-    z-index: 1; 
-    right: 0;
-  }
-  
-  .sticky-element:hover{
-    background-color: #9aeb9a;
-    border-color: black;
-  }
-  
-  .sticky-element:hover button{
-    color: black;
-  }
 
-  #video_tutorial{
-    background-color:  rgba(255, 255, 255, 0.2);
-    padding: 5px;
-    border-radius: 3px;
-    text-decoration: none;
-    color: #9aeb9a; 
-    font-size: 18px;
-    width: fit-content;
-    grid-column: 1/3;
-  }
-  
-  #video_tutorial:hover{
-    background-color: rgba(233, 233, 233, 0.7);
-  }
-
-
-footer {
-  width: 100%;
+.imagens-jp {
+  background-color: black;
   margin: 0 auto;
-  border-top: 5px solid #f0e3be;
-  background-color: rgba(0, 0, 0, 0.9);
+  border: 1px solid #f0e3be;
+  display: grid;
 }
 
-footer ul {
-  text-align: center;
-  list-style-type: none;
-  padding: 0px;
+.imagens-jp img {
+  width: 100%;
+  border-bottom: 1px solid #f0e3be;
+}
+
+.caption {
   margin: 0px;
-  padding-bottom: 15px;
+  margin-top: 0px;
+  padding: 5px;
+}
+
+#gallery-0 {
+  height: fit-content;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 10px;
+  margin: 0 auto;
+  justify-content: center;
+}
+
+#gallery-0 .imagens-jp {
+  background-color: black;
+  width: 202px;
+}
+
+#gallery-0 .imagens-jp img {
+  width: 100%;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.center img {
+  border-radius: 5px;
+  width: 60%;
+}
+
+.sticky-element button{
+  padding: 10px;
+  border: none;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.sticky-element {
+  top: 113px;
+  background-color: rgba(0, 0, 0, 0.9);
+  border: 3px solid #9aeb9a;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-right: none;
+  /* height: 100%; */
+  position: fixed;
+  /* top: 0; */
+  /* text-align: center; */
+  z-index: 1; 
+  right: 0;
+}
+
+.sticky-element:hover{
+  background-color: #9aeb9a;
+  border-color: black;
+}
+
+.sticky-element:hover button{
+  color: black;
 }
 
 .mapafig{
-    float: none;
-    background-color: black;
-    width: 670px;
-    height: fit-content;
-    margin: 0 auto;
-    margin-bottom: 20px;
-    text-align: center;
+  border: 1px solid #f0e3be;
+  float: none;
+  background-color: black;
+  width: 670px;
+  height: fit-content;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  text-align: center;
 }
 
 .mapafig img {
@@ -376,36 +408,120 @@ footer ul {
     background-color: black;
 }
 
-@media screen and (max-width: 1270px) {
-  .logo {
-    margin-top: 50px;
+footer {
+  height: fit-content;
+  grid-area: footer;
+  width: 100%;
+  margin: 0 auto;
+  border-top: 3px solid #f0e3be;
+  background-color: rgba(0, 0, 0, 1);
+}
+
+footer ul {
+  text-align: center;
+  list-style-type: none;
+  padding: 0px;
+  margin: 0px;
+  padding-bottom: 15px;
+}
+
+@media (max-width: 1292px) {
+  .sticky-element{
+    top: 160px;
+  }
+  #header a{
+    font-size: 1.6rem;
+   }
+}
+
+@media (max-width: 1132px) {
+  #header{
+    justify-content: center;
+  }
+  main{
+    margin-top: 160px;
   }
 }
 
-@media screen and (max-width: 1100px) {
-    #lafigure{
-        bottom: 50px;
-    }
-}
 
-@media screen and (max-width: 900px) {
-  main {
+@media (max-width: 950px) {
+  #header{
+    justify-content: space-between;
+  }
+  #menu {
+    display: block;
+    position: absolute;
+    width: 100%;
+    top: 70px;
+    right: 0px;
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(1px);
+    transition: 0.6s;
+    z-index: 1000;
+    height: 0px;
+    visibility: hidden;
+    overflow-y: hidden;
+  }
+  #nav.active #menu {
+    height: calc(100vh - 70px);
+    margin-top: 18px;
+    visibility: visible;
+    overflow-y: auto;
+  }
+  #menu a {
+    padding: 1rem 0;
+    border-bottom: 2px solid #f0e3be;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+
+  
+  #btn-mobile {
+    display: flex;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
     border: none;
-    width: 100%;
-    border-radius: 0px;
-    margin-left: 0px;
-    margin-top: 0px;
+    background: none;
+    cursor: pointer;
+    gap: 0.5rem;
   }
-  .laranja {
-    margin-left: -10px;
+  #hamburger {
+    border-top: 2px solid;
+    width: 30px;
   }
-  footer {
-    border-left: none;
-    border-right: none;
-    width: 100%;
+  #hamburger::after,
+  #hamburger::before {
+    content: '';
+    display: block;
+    width: 30px;
+    height: 2px;
+    background: currentColor;
+    margin-top: 5px;
+    transition: 0.3s;
+    position: relative;
+  }
+  #nav.active #hamburger {
+    border-top-color: transparent;
+  }
+  #nav.active #hamburger::before {
+    transform: rotate(135deg);
+  }
+  #nav.active #hamburger::after {
+    transform: rotate(-135deg);
+    top: -7px;
   }
 
-    .sticky-element button{
+  .sticky-element{
+    top: 100px;
+  }
+  main{
+    margin-top: 110px;
+  }
+
+}
+
+@media screen and (max-width: 830px) {
+  .sticky-element button{
     color: #9aeb9a;
     padding: 5px;
   }
@@ -414,103 +530,32 @@ footer ul {
     background-color: #0d1119;
     top: 125px;
   }
+  main{
+    width: 90%;
+  }
 }
 
-@media screen and (max-width: 830px) {
-  .lista img {
-    height: 45%;
+@media screen and (max-width: 760px) {
+  .mapafig{
+    width: 520px;
   }
-
-  .img img {
-        width: 300px;
-    }
-  }
+}
 
 @media screen and (max-width: 750px) {
 
-    .bairros1{
+  .bairros1{
         flex-direction: column;
-    }
-
-    .img img {
-        width: 100%;
-    }
-
-    #lafigure{
-        bottom: 10px;
-    }
-
-  .button:hover {
-    background-color: black;
   }
 
-  header > nav {
-    width: 100%;
-    margin-right: 0px;
-  }
-
-  .lista {
-    display: block;
-    margin-bottom: 0%;
-    border: none;
-  }
-
-  .lista li {
-    display: grid;
-    border: none;
-    margin-top: 0%;
-    height: fit-content;
-    align-items: flex-start;
-    align-items: center;
-  }
-
-  .button {
-    border-bottom: 1px solid #f0e3be;
-  }
-
-  .button:first-child {
-    border-top: none;
-  }
-
-  .button:not(:last-child) {
-    border-right: none;
-  }
-
-  .lista img {
-    padding-right: 1%;
-    margin: 0 auto;
-    height: 50%;
-    position: relative;
-    top: 0%;
-  }
-
-  .button:hover .submenu {
-    padding: 10px;
-    padding-right: 2%;
-    border: none;
-    top: 0px;
-    position: relative;
-    height: fit-content;
-    background-color: rgba(0, 0, 0, 0);
-    width: fit-content;
-    margin: 0 auto;
-    margin-top: -20px;
-    display: table-cell;
-    text-align: center;
-  }
-
-  .submenu li {
-    padding-bottom: 10%;
-    left: 5px;
+  #lafigure{
+      bottom: 0px; 
+      margin: 0px; 
   }
 
   .sticky-element {
     z-index: 10;
   }
 
-  .logo{
-    margin-top: 0px;
-  }
 }
 
 @media screen and (max-width: 650px) {
@@ -526,21 +571,19 @@ footer ul {
 
 @media screen and (max-width: 630px) {
     #lafigure{
-        float: none;
-        margin: 0 auto;
-        bottom: 0;
+      float: none;
+      margin: 0 auto;
+      margin-top: 15px;
+      margin-bottom: 15px;
+      bottom: 0;
     }
 }
 
-@media screen and (max-width: 540px) {
-  .themesong {
-    text-align: center;
-  }
-  .themesong p {
-    width: 104%;
+@media screen and (max-width: 475px) {
+  .sticky-element{
+    top: 170px;
   }
 }
-
 @media screen and (max-width: 420px) {
   .logo {
     justify-content: center;
@@ -548,24 +591,13 @@ footer ul {
   #lafigure {
     width: 200px;
   }
-}
-
-@media screen and (max-width: 355px) {
-  .gun-pic img {
-    height: 260px;
-    width: 280px;
-  }
-  .logo img {
-    width: 100%;
-  }
-  .laranja {
-    width: 294px;
-    margin-left: -11px;
+  h1{
+    font-size: 2rem;
   }
 }
 
-@media screen and (max-width: 340px) {
-  h1 {
-    font-size: 29px;
+@media screen and (max-width: 350px) {
+  #lafigure {
+    width: 190px;
   }
 }
