--- a/mapa_gtav/mapashp.css
+++ b/mapa_gtav/mapashp.css
@@ -1,21 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Roboto+Condensed&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Roboto+Condensed&family=Rubik&display=swap");
-@font-face {
-  font-family: "Pricedown";
-  src: url("pricedow.ttf") format("truetype");
-}
-
-body {
-  overflow-x: hidden;
-  margin: 0px;
-  padding: 0px;
-  background-image: url("./assets/background.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-}
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&family=Lobster&display=swap');
 
 * {
+  padding: 0;
   box-sizing: border-box;
   color: #ffffff;
   font-family: "Montserrat", sans-serif;
@@ -23,115 +12,141 @@ body {
   font-family: "Rubik", sans-serif;
 }
 
-.wrapper {
+body{
+  height: 100vh;
   width: 100%;
+  background-image: url("./assets/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
   overflow-x: hidden;
-}
-
-header {
-  margin: 0px;
-  padding: 0px;
-  display: flex;
-  height: 9%;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.9);
-  border-bottom: 1px solid #f0e3be;
-  align-items: center;
-  justify-content: center;
-}
-
-header > nav {
-  height: 100%;
-  display: flex;
-}
-
-#header-img {
-  display: none;
-}
-
-.lista {
-  padding: 0px;
-  margin: 0px;
-  position: relative;
-  height: 100%;
-  display: inline-flex;
-  width: 100%;
-  list-style: none;
-  justify-content: center;
-  align-items: center;
-  border-radius: 10px;
-}
-
-.lista li {
   display: grid;
-  align-items: center;
+    height: fit-content;
+    grid-template-areas:
+        "header"
+        "main"
+        "footer";
+    grid-template-columns: repeat(1, 1fr);
 }
 
-.button {
-  height: 65px;
-  margin: 0 auto;
-  padding-left: 5px;
-  padding-right: 5px;
+body,
+ul {
+  margin: 0px;
+  padding: 0px;
 }
 
-.button:hover {
-  background-color: #ffffff;
+.wrapper{
+  background-color: rgba(0, 0, 0, 0.9);
 }
 
-.button:not(:last-child) {
-  border-right: 1px solid #f0e3be;
+h1{
+  font-size: 2.5rem;
+  font-family: 'Lobster', cursive;
+    margin: 0 auto;
+    text-shadow: -4px -1px 0px rgb(0, 88, 19), -1px 1px 0px black, 1px -1px 0px black, 1px 0px 0px black;
 }
 
-.submenu {
-  display: none;
+a {
+  color: black;
+  text-decoration: none;
+  font-family: sans-serif;
 }
 
-li:hover .submenu {
-  position: absolute;
-  list-style: none;
-  left: 0%;
-  background-color: #000000;
-  border: 1px solid #f0e3be;
-  display: flex;
-  gap: 20px;
-  top: 100%;
+a:hover {
+  background: rgba(0, 0, 0, 0.05);
+}
+
+#logo {
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-family: "Pricedown";
+  font-size: 2rem;
+  color: white;
+  text-shadow: 
+  -1px -1px 0px black, 
+  -1px 1px 0px black,                    
+   1px -1px 0px black,                  
+   1px 0px 0px black;
+   height: 55px;
+}
+
+#logo img{
+    height: 100%;
+}
+
+#header {
+  position: fixed;
+  top: 0%;
+  z-index: 999;
   width: 100%;
-  height: 90%;
-  justify-content: center;
+  box-sizing: border-box;
+  height: fit-content;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: rgba(0, 0, 0, 0.8);
+  flex-wrap: wrap;
+  border-bottom: 1px solid #f0e3be;
+  grid-area: header;
 }
 
-.submenu li {
-  color: #ffffff;
-  font-size: 20px;
-  font-family: "Montserrat", sans-serif;
-  font-family: "Roboto Condensed", sans-serif;
-  font-family: "Rubik", sans-serif;
-  position: relative;
-  top: 0%;
+#menu {
+  display: flex;
+  list-style: none;
+  gap: 0.5rem;
+  flex-wrap: wrap;
 }
 
-.submenu li a:hover {
-  color: aqua;
-  cursor: pointer;
+#menu a {
+  display: block;
+  padding: 0.5rem;
+  color: white;
+  text-decoration: none;
+  font-family: "Pricedown";
+  font-size: 1.7rem;
+  text-shadow: 
+  -1px -1px 0px black, 
+  -1px 1px 0px black,                    
+   1px -1px 0px black,                  
+   1px 0px 0px black;
 }
 
-.lista img {
-  height: 50%;
-  position: relative;
-  top: 0%;
+#menu a:hover{
+    color: aqua;
+    border-bottom: none;
+  }
+  
+
+#btn-mobile {
+  display: none;
 }
 
 main {
-  text-align: center;
-  padding: 20px;
-  background-color: rgba(0, 0, 0, 0.9);
-  border-bottom: none;
-  width: 100%;
+  position: relative;
+  /* height: 90%; */
+  /* top: 88px; */
+  width: 80%;
+  margin-top: 88px;
+  height: max-content;
+  grid-area: main;
   margin: 0 auto;
-  border-bottom-left-radius: 0px;
-  border-bottom-right-radius: 0px;
+  margin-top: 110px;
+  /* padding-top: 10px; */
+  /* height: 100%; */
 }
 
+main ul{
+  padding-left: 40px;
+}
+
+main a{
+  color: white;
+}
+
+main p,li,a *{
+  font-size: 1rem;
+}
 
 .logo {
   display: flex;
@@ -315,11 +330,15 @@ button {
 }
 
   .subsecs{
+    bottom: -190px;
     display: inline-grid;
     gap: 20px;
     justify-items: center;
+    float: right;
     position: relative;
-    bottom: 500px;
+    background-color: black;
+    padding: 10px;
+    border: 1px solid #f0e3be;
   }
 
   .subsecs h2 {
@@ -328,6 +347,7 @@ button {
   }
 
   .ls, .bc{
+    border: 1px solid #9aeb9a;
     color: #9aeb9a; 
     text-align: center;
     width: 160px;
@@ -352,6 +372,7 @@ button {
   }
 
   #video_tutorial{
+    border: 1px solid #9aeb9a;
     background-color:  rgba(255, 255, 255, 0.2);
     padding: 5px;
     border-radius: 3px;
@@ -372,9 +393,12 @@ button {
 
   
 footer {
+  height: fit-content;
+  grid-area: footer;
+  width: 100%;
   margin: 0 auto;
-  border-top: 5px solid #f0e3be;
-  background-color: rgba(0, 0, 0, 0.9);
+  border-top: 3px solid #f0e3be;
+  background-color: rgba(0, 0, 0, 1);
 }
 
 footer ul {
@@ -385,13 +409,65 @@ footer ul {
   padding-bottom: 15px;
 }
 
-@media screen and (max-width: 1270px) {
-  .logo {
-    margin-top: 50px;
+main p, i, li{
+  font-size: 1.1rem;
+}
+
+main li{
+  padding: 3px;
+}
+
+@media (max-width: 1292px) {
+  .sticky-element{
+    top: 160px;
+  }
+  #header a{
+    font-size: 1.6rem;
+   }
+}
+
+@media (max-width: 1194px) {
+  main{
+    width: 90%;
   }
 }
 
 
+@media (max-width: 1132px) {
+  #header{
+    justify-content: center;
+  }
+  main{
+    margin-top: 160px;
+  }
+  .subsecs{
+    bottom: -120px;
+  }
+}
+
+@media (max-width: 1063px) {
+  .mapafig{
+    display: block;
+    margin: 0 auto;
+  }
+
+  .subsecs{
+    display: grid;
+    width: fit-content;
+    margin: 0 auto;
+    float: none;
+    bottom: 0px;
+  }
+  #mainhr{
+    display: block;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+
+  main{
+    padding-bottom: 20px;
+  }
+}
 
 @media screen and (max-width: 983px) {
   main{
@@ -400,9 +476,6 @@ footer ul {
 
   .subsecs{
     bottom: 0px;
-  }
-  #mainhr{
-    display: block;
   }
 
   .sticky-element{
@@ -417,17 +490,99 @@ footer ul {
   .sticky-element {
     background-color: #0d1119;
   }
+}
+
+@media (max-width: 950px) {
+  #header{
+    justify-content: space-between;
+  }
+  #menu {
+    display: block;
+    position: absolute;
+    width: 100%;
+    top: 70px;
+    right: 0px;
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(1px);
+    transition: 0.6s;
+    z-index: 1000;
+    height: 0px;
+    visibility: hidden;
+    overflow-y: hidden;
+  }
+  #nav.active #menu {
+    height: calc(100vh - 70px);
+    margin-top: 18px;
+    visibility: visible;
+    overflow-y: auto;
+  }
+  #menu a {
+    padding: 1rem 0;
+    border-bottom: 2px solid #f0e3be;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+
+  
+  #btn-mobile {
+    display: flex;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    border: none;
+    background: none;
+    cursor: pointer;
+    gap: 0.5rem;
+  }
+  #hamburger {
+    border-top: 2px solid;
+    width: 30px;
+  }
+  #hamburger::after,
+  #hamburger::before {
+    content: '';
+    display: block;
+    width: 30px;
+    height: 2px;
+    background: currentColor;
+    margin-top: 5px;
+    transition: 0.3s;
+    position: relative;
+  }
+  #nav.active #hamburger {
+    border-top-color: transparent;
+  }
+  #nav.active #hamburger::before {
+    transform: rotate(135deg);
+  }
+  #nav.active #hamburger::after {
+    transform: rotate(-135deg);
+    top: -7px;
+  }
+
+  .sticky-element{
+    top: 100px;
+  }
+  main{
+    margin-top: 110px;
+  }
 
 }
 
 @media screen and (max-width: 830px) {
-  .lista img {
-    height: 45%;
-  }
   .img img {
-        width: 300px;
-    }
+    width: 300px;
+}
+  
+  .sticky-element button{
+    color: #9aeb9a;
+    padding: 5px;
   }
+
+  .sticky-element {
+    background-color: #0d1119;
+    top: 125px;
+  }
+}
 
 @media screen and (max-width: 750px) {
 
@@ -435,73 +590,9 @@ footer ul {
     top: 350px;
   }
 
-  .logo{
-    margin-top: 0px;
-  }
-
 
   .button:hover {
     background-color: black;
-  }
-
-  header > nav {
-    width: 100%;
-    margin-right: 0px;
-  }
-
-  .lista {
-    display: block;
-    margin-bottom: 0%;
-    border: none;
-  }
-
-  .lista li {
-    display: grid;
-    border: none;
-    margin-top: 0%;
-    height: fit-content;
-    align-items: flex-start;
-    align-items: center;
-  }
-
-  .button {
-    border-bottom: 1px solid #f0e3be;
-  }
-
-  .button:first-child {
-    border-top: none;
-  }
-
-  .button:not(:last-child) {
-    border-right: none;
-  }
-
-  .lista img {
-    padding-right: 1%;
-    margin: 0 auto;
-    height: 50%;
-    position: relative;
-    top: 0%;
-  }
-
-  .button:hover .submenu {
-    padding: 10px;
-    padding-right: 2%;
-    border: none;
-    top: 0px;
-    position: relative;
-    height: fit-content;
-    background-color: rgba(0, 0, 0, 0);
-    width: fit-content;
-    margin: 0 auto;
-    margin-top: -20px;
-    display: table-cell;
-    text-align: center;
-  }
-
-  .submenu li {
-    padding-bottom: 10%;
-    left: 5px;
   }
 
 }
@@ -513,8 +604,6 @@ footer ul {
 
     .mapafig {
         width: 90%;
-        margin-left: 0px;
-        margin-right: 0px;
     }
 
     .ls, .bc{
