--- a/sobre_gtav/index.css
+++ b/sobre_gtav/index.css
@@ -1,9 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Roboto+Condensed&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Roboto+Condensed&family=Rubik&display=swap");
-@font-face {
-  font-family: "Pricedown";
-  src: url("pricedow.ttf") format("truetype");
-}
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&family=Lobster&display=swap');
 
 * {
   padding: 0;
@@ -38,7 +36,14 @@ ul {
 }
 
 .wrapper{
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+h1{
+  font-size: 2.5rem;
+  font-family: 'Lobster', cursive;
+    margin: 0 auto;
+    text-shadow: -6px -1px 0px rgb(0, 88, 19), -1px 1px 0px black, 1px -1px 0px black, 1px 0px 0px black;
 }
 
 
@@ -200,7 +205,6 @@ main h2 {
   margin: 0 auto;
   margin-bottom: 30px;
 }
-
 
 .laranja {
   background-color: #000000;
@@ -568,11 +572,5 @@ main li{
   .laranja {
     width: 294px;
     margin-left: -11px;
-  }
-}
-
-@media screen and (max-width: 340px) {
-  h1 {
-    font-size: 29px;
   }
 }
