--- a/veiculos_gtav/mainstyles.css
+++ b/veiculos_gtav/mainstyles.css
@@ -1,18 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Roboto+Condensed&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Roboto+Condensed&family=Rubik&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lilita+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lilita+One&family=Lobster&display=swap");
 
-body {
-  overflow-x: hidden;
-  margin: 0px;
-  padding: 0px;
-  background-image: url("./assets/background.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  overflow-x: hidden;
+html{
+  background-color: #000000;
 }
 
 * {
+  padding: 0;
   box-sizing: border-box;
   color: #ffffff;
   font-family: "Montserrat", sans-serif;
@@ -20,302 +16,330 @@ body {
   font-family: "Rubik", sans-serif;
 }
 
-.wrapper {
+body {
+  height: 100vh;
   width: 100%;
-}
-
-header {
-  margin: 0px;
-  padding: 0px;
-  display: flex;
-  height: 9%;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.9);
-  border-bottom: 1px solid #f0e3be;
-  align-items: center;
-  justify-content: center;
-}
-
-header > nav {
-  height: 100%;
-  display: flex;
-}
-
-#header-img {
-  display: none;
-}
-
-.lista {
-  padding: 0px;
-  margin: 0px;
-  position: relative;
-  height: 100%;
-  display: inline-flex;
-  width: 100%;
-  list-style: none;
-  justify-content: center;
-  align-items: center;
-  border-radius: 10px;
-}
-
-.lista li {
+  background-image: url("./assets/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  overflow-x: hidden;
   display: grid;
-  align-items: center;
+  height: fit-content;
+  grid-template-areas:
+    "header"
+    "main"
+    "footer";
+  grid-template-columns: repeat(1, 1fr);
 }
 
-.button {
-  height: 65px;
+body,
+ul {
+  margin: 0px;
+  padding: 0px;
+}
+
+.wrapper {
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+h1 {
+  font-size: 2.5rem;
+  font-family: "Lobster", cursive;
   margin: 0 auto;
-  padding-left: 5px;
-  padding-right: 5px;
+  text-shadow: -6px -1px 0px rgb(0, 88, 19), -1px 1px 0px black,
+    1px -1px 0px black, 1px 0px 0px black;
 }
 
-.button:hover {
-  background-color: #ffffff;
+a {
+  color: black;
+  text-decoration: none;
+  font-family: sans-serif;
 }
 
-.button:not(:last-child) {
-  border-right: 1px solid #f0e3be;
+a:hover {
+  background: rgba(0, 0, 0, 0.05);
 }
 
-.submenu {
-  display: none;
+p,
+h1 {
+  padding: 0 5%;
 }
 
-li:hover .submenu {
-  position: absolute;
-  list-style: none;
-  left: 0%;
-  background-color: #000000;
-  border: 1px solid #f0e3be;
-  display: flex;
-  gap: 20px;
-  top: 100%;
+#logo {
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-family: "Pricedown";
+  font-size: 2rem;
+  color: white;
+  text-shadow: -1px -1px 0px black, -1px 1px 0px black, 1px -1px 0px black,
+    1px 0px 0px black;
+  height: 55px;
+}
+
+#logo img {
+  height: 100%;
+}
+
+#header {
+  position: fixed;
+  top: 0%;
+  z-index: 999;
   width: 100%;
-  height: 90%;
-  justify-content: center;
+  box-sizing: border-box;
+  height: fit-content;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: rgba(0, 0, 0, 0.8);
+  flex-wrap: wrap;
+  border-bottom: 1px solid #f0e3be;
+  grid-area: header;
 }
 
-.submenu li {
-  color: #ffffff;
-  font-size: 20px;
-  font-family: "Montserrat", sans-serif;
-  font-family: "Roboto Condensed", sans-serif;
-  font-family: "Rubik", sans-serif;
-  position: relative;
-  top: 0%;
+#menu {
+  display: flex;
+  list-style: none;
+  gap: 0.5rem;
+  flex-wrap: wrap;
 }
 
-.submenu li a:hover {
+#menu a {
+  display: block;
+  padding: 0.5rem;
+  color: white;
+  text-decoration: none;
+  font-family: "Pricedown";
+  font-size: 1.7rem;
+  text-shadow: -1px -1px 0px black, -1px 1px 0px black, 1px -1px 0px black,
+    1px 0px 0px black;
+}
+
+#menu a:hover {
   color: aqua;
-  cursor: pointer;
+  border-bottom: none;
 }
 
-.lista img {
-  height: 50%;
-  position: relative;
-  top: 0%;
-}
-
-p {
-    font-size: 18px;
+#btn-mobile {
+  display: none;
 }
 
 main {
-    padding: 20px;
-    background-color: rgba(0, 0, 0, 0.8);
-    width: 100%;
+  position: relative;
+  /* height: 90%; */
+  /* top: 88px; */
+  width: 100%;
+  margin-top: 88px;
+  height: max-content;
+  grid-area: main;
+  margin: 0 auto;
+  margin-top: 110px;
+  padding-bottom: 30px;
+  /* padding-top: 10px; */
+  /* height: 100%; */
 }
 
+main ul {
+  padding-left: 40px;
+}
 
-.logo {
-    width: 100%;
-    display: inline-flex;
-    justify-content: left;
-  }
-  
-  .logo img {
-    width: 195px;
-  }
+main a {
+  color: white;
+}
 
-  .sticky-element button{
-    background-color: rgba(0,0,0,0);
-    padding: 10px;
-    border: none;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-  }
-  
-  .sticky-element {
-    background-color: rgba(0, 0, 0, 0.9);
-    border: 3px solid #9aeb9a;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    border-right: none;
-    /* height: 100%; */
-    position: fixed;
-    /* top: 0; */
-    /* text-align: center; */
-    /* z-index: 1; */
-    right: 0;
-  }
-  
-  .sticky-element:hover{
-    background-color: #9aeb9a;
-    border-color: black;
-  }
-  
-  .sticky-element:hover button{
-    color: black;
-  }
+main p,
+li,
+a * {
+  font-size: 1.1rem;
+}
 
-  .laranja {
-    background-color: #000000;
-    border: 1px solid #f0e3be;
-    width: fit-content;
-    position: relative;
-    display: inline-block;
-    width: fit-content;
-    float: left;
-    margin-right: 2px;
-    margin-bottom: 10px;
-  }
-  
-  .indice-header {
-    border-bottom: 1px solid #f0e3be;
-    display: flex;
-    width: 100%;
-    padding: 6px;
-    height: fit-content;
-    margin: 0 auto;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .laranja .indice-header h2 {
-    width: 68%;
-    color: #ffffff;
-    position: relative;
-    border: none;
-    font-weight: 500;
-    font-size: 20px;
-    margin: 0px;
-    padding: 0px;
-    padding-right: 6%;
-  
-  }
-  
-  button {
-    outline: none;
-    border-left: 1px solid red;
-    border-right: 1px solid red;
-    background-color: rgba(0, 0, 0, 0);
-  }
-  
-  .indice-conteudo {
-    display: block;
-  }
+main p {
+  padding: 0px 20px 0px 20px;
+}
 
-  .laranja.highlight{
-    background-color: red;
-  }
-  
-  .indice-header.highlight {
-    border: none;
-    width: 200px;
-    padding-left: 5px;
-  }
-  
-  .indice-conteudo.highlight {
-    display: none;
-  }
-  
-  .laranja button:active {
-    color: #abeeab;
-  }
-  
-  #indice_button.highlight {
-    border-left: 1px solid #abeeab;
-    border-right: 1px solid #abeeab;
-  }
-  
-  .laranja ol {
-    margin-top: 5px;
-    padding: 5px;
-    list-style: none;
-  }
-  
-  .laranja ol li ol {
-    margin-top: -10px;
-    padding-left: 8px;
-  }
-  
-  .laranja ol li a {
-    text-decoration: none;
-    width: 100%;
-    border-radius: 3px;
-    display: block;
-    line-height: 1.75;
-    padding: 0px 6px;
-  }
-  
-  .laranja span {
-      color: #b3b3b3;
-    }
-  
-  .laranja ol li a:hover {
-    background: rgba(255, 255, 255, 0.5);
-    cursor: pointer;
-    color: #abeeab;
-  }
-  
-  
-  .laranja ol li a:hover {
-    background: rgba(0, 0, 0, 0.5);
-    cursor: pointer;
-    color: #abeeab;
-  }
-  
-  
+.laranja {
+  background-color: #000000;
+  border: 1px solid #f0e3be;
+  border-bottom: none;
+  width: fit-content;
+  position: relative;
+  display: block;
+  width: fit-content;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.indice-header {
+  border-bottom: 1px solid #f0e3be;
+  display: flex;
+  width: 100%;
+  padding: 6px;
+  height: fit-content;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
+}
+
+.laranja .indice-header h2 {
+  width: 68%;
+  color: #ffffff;
+  position: relative;
+  border: none;
+  font-weight: 500;
+  font-size: 20px;
+  margin: 0px;
+  padding: 0px;
+  padding-right: 6%;
+}
+
+button {
+  outline: none;
+  border-left: 1px solid red;
+  border-right: 1px solid red;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.indice-conteudo {
+  display: none;
+}
+
+.indice-header.highlight {
+  width: 100%;
+  padding-left: 5px;
+}
+
+.indice-conteudo.highlight {
+  border-bottom: 1px solid #f0e3be;
+  display: block;
+}
+
+.laranja button:active {
+  color: #abeeab;
+}
+
+#indice_button {
+  outline: none;
+  padding-right: 5px;
+  padding-left: 5px;
+  border-left: none;
+  border-right: none;
+  border-top: 1px solid #abeeab;
+  border-bottom-right-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+#indice_button.highlight {
+  border-top: 1px solid red;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 5px;
+}
+
+.laranja ol {
+  margin-top: 5px;
+  padding: 5px;
+  list-style: none;
+}
+
+.laranja ol li ol {
+  margin-top: -10px;
+  padding-left: 8px;
+}
+
+.laranja ol li a {
+  text-decoration: none;
+  width: 100%;
+  border-radius: 3px;
+  display: block;
+  line-height: 1.75;
+  padding: 0px 6px;
+}
+
+.laranja span {
+  color: #b3b3b3;
+}
+
+.laranja ol li a:hover {
+  background: rgba(255, 255, 255, 0.5);
+  cursor: pointer;
+  color: #abeeab;
+}
+
+.laranja ol li a:hover {
+  background: rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+  color: #abeeab;
+}
+.sticky-element button {
+  background-color: rgba(0, 0, 0, 0);
+  padding: 10px;
+  border: none;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.sticky-element {
+  background-color: rgba(0, 0, 0, 0.9);
+  border: 3px solid #9aeb9a;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-right: none;
+  /* height: 100%; */
+  position: fixed;
+  /* top: 0; */
+  /* text-align: center; */
+  z-index: 1;
+  right: 0;
+}
+
+.sticky-element:hover {
+  background-color: #9aeb9a;
+  border-color: black;
+}
+
+.sticky-element:hover button {
+  color: black;
+}
+
 .veiculos-container {
-    font-family: 'Montserrat', sans-serif;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-family: 'Rubik', sans-serif;
-    color: #FFFFFF;
-    width: fit-content;
-    /* margin-left: 10%; */
-    /* margin-top: 10%; */
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 60px;
+  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
+  font-family: "Rubik", sans-serif;
+  color: #ffffff;
+  width: fit-content;
+  margin: 0 auto;
+  /* margin-left: 10%; */
+  /* margin-top: 10%; */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 60px;
 }
 
- .introducao{
-    justify-content: center;
-    width: 70%;
-    height: -60px;
-    padding: 20px;
-    margin-left: 3.5%;
-    margin-bottom: -30px;
-    border-radius: 10px;
-    margin-top: 30px;
-    
+.introducao {
+  justify-content: center;
+  width: 70%;
+  height: -60px;
+  padding: 20px;
+  margin-left: 3.5%;
+  margin-bottom: -30px;
+  border-radius: 10px;
+  margin-top: 30px;
 }
 
-.introducao h3{
-  background-color:rgba(0, 0, 0, 0.8);
+.introducao h3 {
+  background-color: rgba(0, 0, 0, 0.8);
   width: 50%;
   font-size: 34px;
   margin-bottom: 0px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   padding-left: 10px;
-  
 }
 
-.introducao p{
+.introducao p {
   width: 90%;
   padding: 10px;
   background-color: rgba(0, 0, 0, 0.5);
@@ -324,228 +348,202 @@ main {
   border-bottom-right-radius: 10px;
 }
 
-
-  .vehicle {
-    border: 1px solid #f0e3be;
-    background-color: rgba(0, 0, 0, 1);
-    width: 16rem;
-    /* margin-top: 3%; */
-    /* margin-left: 5%; */
-    /* margin-right: 5%; */
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-  }
-
-  .vehicle img {
-    max-width: 100%;
-  }
-
-  .vehicle h2 {
-    font-size: 24px;
-    font-weight: bold;
-    margin: 10px;
-    text-align: center;
-  }
-
-  .vehicle h3 {
-    font-size: 18px;
-    font-weight: bold;
-    margin: 5px 10px;
-    text-align: center;
-    text-transform: uppercase;
-  }
-
-  .vehicle-stats {
-    border-top: 1px solid #ccc;
-    margin: 10px;
-    padding-top: 10px;
-  }
-
-  .vehicle-stats p {
-    display: inline-block;
-    font-size: 16px;
-    font-weight: bold;
-    margin: 0 10px;
-  }
-
-  .vehicle-stats .bar {
-    background: rgba(255,255,255,.3);
-    display: inline-block;
-    height: 10px;
-    margin: 0 10px;
-    width: 200px;
-  }
-
-
-  .vehicle-stats .fill {
-    background-color: #ffffff;
-    height: 100%;
-    transition: width 0.5s ease;
-    width: 0%;
-  }
-  
-  #video_tutorial{
-    background-color:  rgba(255, 255, 255, 0.2);
-    padding: 5px;
-    border-radius: 3px;
-    text-decoration: none;
-    color: #9aeb9a; 
-    font-size: 18px;
-    width: fit-content;
-    grid-column: 1/3;
-  }
-  
-  #video_tutorial:hover{
-    background-color: rgba(233, 233, 233, 0.7);
-  }
-
-  footer {
-    color: white;
-    width: 100%;
-    margin: 0 auto;
-    border-top: 5px solid #f0e3be;
-    background-color: rgba(0, 0, 0, 0.9);
-  }
-  
-  footer h2{
-    color: white;
-  }
-  
-  footer ul {
-    text-align: center;
-    list-style-type: none;
-    padding: 0px;
-    margin: 0px;
-    padding-bottom: 15px;
-  }
-
-  @media screen and (max-width: 1270px) {
-    .logo {
-      margin-top: 50px;
-    }
-  }
-  
-  @media screen and (max-width: 900px) {
-
-      .sticky-element button{
-        color: #9aeb9a;
-        padding: 5px;
-      }
-  
-      .sticky-element {
-        background-color: #0d1119;
-        top: 125px;
-      }
-  }
-  
-  @media screen and (max-width: 830px) {
-    .lista img {
-      height: 45%;
-    }
-  }
-
-  
-@media screen and (max-width: 750px) {
-
-    .button:hover {
-      background-color: black;
-    }
-  
-    header > nav {
-      width: 100%;
-      margin-right: 0px;
-    }
-  
-    .lista {
-      display: block;
-      margin-bottom: 0%;
-      border: none;
-    }
-  
-    .lista li {
-      display: grid;
-      border: none;
-      margin-top: 0%;
-      height: fit-content;
-      align-items: flex-start;
-      align-items: center;
-    }
-  
-    .button {
-      border-bottom: 1px solid #f0e3be;
-    }
-  
-    .button:first-child {
-      border-top: none;
-    }
-  
-    .button:not(:last-child) {
-      border-right: none;
-    }
-  
-    .lista img {
-      padding-right: 1%;
-      margin: 0 auto;
-      height: 50%;
-      position: relative;
-      top: 0%;
-    }
-  
-    .button:hover .submenu {
-      padding: 10px;
-      padding-right: 2%;
-      border: none;
-      top: 0px;
-      position: relative;
-      height: fit-content;
-      background-color: rgba(0, 0, 0, 0);
-      width: fit-content;
-      margin: 0 auto;
-      margin-top: -20px;
-      display: table-cell;
-      text-align: center;
-    }
-  
-    .submenu li {
-      padding-bottom: 10%;
-    }
-  
-    .logo{
-      margin-top: 0px;
-    }
-    .sticky-element {
-      z-index: 10;
-    }
+.vehicle {
+  border: 1px solid #f0e3be;
+  background-color: rgba(0, 0, 0, 1);
+  width: 16rem;
+  /* margin-top: 3%; */
+  /* margin-left: 5%; */
+  /* margin-right: 5%; */
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
-@media screen and (max-width: 497px) {
-  .laranja{
-    float: none;
+.vehicle img {
+  max-width: 100%;
+}
+
+.vehicle h2 {
+  font-size: 24px;
+  font-weight: bold;
+  margin: 10px;
+  text-align: center;
+}
+
+.vehicle h3 {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 5px 10px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.vehicle-stats {
+  border-top: 1px solid #ccc;
+  margin: 10px;
+  padding-top: 10px;
+}
+
+.vehicle-stats p {
+  display: inline-block;
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0 10px;
+}
+
+.vehicle-stats .bar {
+  background: rgba(255, 255, 255, 0.3);
+  display: inline-block;
+  height: 10px;
+  margin: 0 10px;
+  width: 200px;
+}
+
+.vehicle-stats .fill {
+  background-color: #ffffff;
+  height: 100%;
+  transition: width 0.5s ease;
+  width: 0%;
+}
+
+footer {
+  height: fit-content;
+  grid-area: footer;
+  width: 100%;
+  margin: 0 auto;
+  border-top: 3px solid #f0e3be;
+  background-color: rgba(0, 0, 0, 1);
+}
+
+footer ul {
+  text-align: center;
+  list-style-type: none;
+  padding: 0px;
+  margin: 0px;
+  padding-bottom: 15px;
+}
+
+@media (max-width: 1292px) {
+  #header a {
+    font-size: 1.6rem;
+  }
+}
+
+@media (max-width: 1132px) {
+  #header {
+    justify-content: center;
+  }
+  main {
+    margin-top: 160px;
+  }
+}
+
+@media (max-width: 950px) {
+  #header {
+    justify-content: space-between;
+  }
+  #menu {
     display: block;
-    margin: 0 auto;
-    margin-bottom: 20px;
+    position: absolute;
+    width: 100%;
+    top: 70px;
+    right: 0px;
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(1px);
+    transition: 0.6s;
+    z-index: 1000;
+    height: 0px;
+    visibility: hidden;
+    overflow-y: hidden;
   }
-  
+  #nav.active #menu {
+    height: calc(100vh - 70px);
+    margin-top: 18px;
+    visibility: visible;
+    overflow-y: auto;
+  }
+  #menu a {
+    padding: 1rem 0;
+    border-bottom: 2px solid #f0e3be;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+
+  #btn-mobile {
+    display: flex;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    border: none;
+    background: none;
+    cursor: pointer;
+    gap: 0.5rem;
+  }
+  #hamburger {
+    border-top: 2px solid;
+    width: 30px;
+  }
+  #hamburger::after,
+  #hamburger::before {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 2px;
+    background: currentColor;
+    margin-top: 5px;
+    transition: 0.3s;
+    position: relative;
+  }
+  #nav.active #hamburger {
+    border-top-color: transparent;
+  }
+  #nav.active #hamburger::before {
+    transform: rotate(135deg);
+  }
+  #nav.active #hamburger::after {
+    transform: rotate(-135deg);
+    top: -7px;
+  }
+
+  .sticky-element {
+    top: 100px;
+  }
+  main {
+    margin-top: 125px;
+  }
 }
 
+@media screen and (max-width: 900px) {
+  .sticky-element button {
+    color: #9aeb9a;
+    padding: 5px;
+  }
+
+  .sticky-element {
+    background-color: #0d1119;
+    top: 95px;
+  }
+}
+
+@media screen and (max-width: 830px) {
+  .sticky-element button {
+    color: #9aeb9a;
+    padding: 5px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .button:hover {
+    background-color: black;
+  }
+}
 
 @media screen and (max-width: 420px) {
-    .logo{
-        justify-content: center;
-    }
 
-    p{
-        text-align: center;
-        font-size: 17px;
-    }
+  .veiculos-container .vehicle {
+    transform: scale(0.9);
+    transform-origin: top;
+  }
 
-
-    .veiculos-container .vehicle {
-        transform: scale(0.9);
-        transform-origin: top;
-      }
-
-    .veiculos-container{
-        gap: 0px;
-    }
-    
+  .veiculos-container {
+    gap: 0px;
+  }
 }
